# tangue

./: .gitignore  CMakeLists.txt  Cargo.toml  Doxyfile  README.md  rust-toolchain.toml
.github/workflows/: cmake.yml  doxygen.yml  rust.yml
examples/: CMakeLists.txt
examples/simple_application/: CMakeLists.txt
examples/simple_application/sources/: main.cpp
headers/: application.h  application.hpp  argument_manager.hpp  dashboard.h  environment_manager.hpp  gauge.h  logger.hpp  network.h  packet.h  process.hpp  process_manager.hpp  renderer.h  server.h  tangue.hpp  telemetry.h  window.h
sources/: application.c  application.cpp  argument_manager.cpp  dashboard.c  environment_manager.cpp  gauge.c  main.c  main.cpp  main_old.c  network.c  process.cpp  process_manager.cpp  renderer.c  server.c  tangue.cpp  telemetry.c  window.c
src/: lib.rs  main.rs
tests/: CMakeLists.txt
tests/headers/: test_application.hpp
tests/sources/: test_application.cpp
